--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="left displayNone" onclick="leftButton()"><</div>
     
     <div class="bigBigBox">
-        <div class="bigBox active" onclick="rotate(this)">
+        <div class="bigBox rightBox" onclick="rotate(this)">
             <div class="box">Be</div>
             <div class="box">
                 <span>Was/Were</span>
